syntax = "proto3";

package go.micro.srv.GetUserHouse;

service Example {
	rpc GetUserHouse(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string Sessionid = 1;
}

message Response {
	string Errno = 1;
	string Errmsg = 2;
	bytes Mix = 3; //查询到的完整数据的二进制流
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
